<resources>
    <string name="app_name">Sit \'n Shop</string>

    <!-- Menu Items -->
    <string name="history_title_item">History</string>

    <!-- Navigation Drawer -->
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <!-- Login Resource -->
    <string name="signUpText"><u>Sign Up</u></string>
    <string name="tab_text_1">Store</string>
    <string name="tab_text_2">Orders</string>
    <string name="title_activity_cart">CartActivity</string>

    <!-- Authentication -->
    <string name="authentication_success">Authentication success.</string>
    <string name="authentication_failed">Authentication failed.</string>

    <!-- Login and register error -->
    <string name="requires_email">Email is required.</string>
    <string name="requires_password">Password is required.</string>

    <!-- Sign Out Confirmation Message -->
    <string name="signOut_title">Sign Out</string>
    <string name="signOut_confirmation">Are you sure want to sign out?</string>
    <string name="signOut_confirm">Yes</string>
    <string name="signOut_cancel">No</string>

    <!--Generating Sales Report Confirmation Message -->
    <string name="salesReport_title">Last Month Sales Report</string>
    <string name="salesReport_confirmation">You will be sending a request for last month sales report. Click "Yes" to confirm.</string>
    <string name="salesReport_confirm">Yes</string>
    <string name="salesReport_cancel">No</string>
    <string name="salesReport_reply">Request has been sent. Your sales report will be sent to you in 24 hours.</string>

    <!-- Transaction -->
    <string name="transaction_item_unit_price_key">unit_price</string>
    <string name="transaction_item_quantity">quantity</string>

    <!-- Transaction History Default Values -->
    <string name="history_store_name_default">Store name</string>
    <string name="history_transaction_date_default">Transaction date</string>
    <string name="history_payment_amount_default">Payment amount</string>
    <string name="transaction_adapter_item_name_title">Item name</string>
    <string name="transaction_adapter_quantity_title">Qty x item price</string>
    <string name="transaction_adapter_total_price">Price</string>

    <!-- Generating Sales Report -->
    <string name="report_request_date">Request date</string>
    <string name="store_name_default">Store name</string>
    <string name="request_status">Request Status</string>

    <!-- Order Details Default Values -->
    <string name="user_name_default">Username</string>
    <string name="user_location">User Location</string>
    <string name="order_status">Order Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main_register">main_register</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_registration_role">RegistrationRoleActivity</string>
    <string name="add_item">Add Item</string>
    <string name="sign_out">Sign Out</string>

    <!-- User Navigation Default Values -->
    <string name="user_navigation_default_name">User name</string>
    <string name="user_navigation_default_email">xyz@example.com</string>

    <!-- Product -->
    <string name="product_image_description">Product Image</string>
    <string name="product_name_default">Product Name</string>
    <string name="product_price_default">Price</string>
    <string name="product_stock_default">Stock: 0</string>

    <!-- Order Product -->
    <string name="user_order_product_button_text">Place Order</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
</resources>