<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/transaction_detail_adapter_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_adapter_item_name_title"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction_detail_adapter_item_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_adapter_quantity_title"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/transaction_detail_adapter_item_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/transaction_adapter_total_price"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>