<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="@dimen/user_order_product_padding">

    <ImageView android:id="@+id/product_image_view"
        android:layout_width="@dimen/product_image_size"
        android:layout_height="@dimen/product_image_size"
        android:layout_marginEnd="@dimen/product_info_margin"
        android:scaleType="centerCrop"
        android:contentDescription="@string/product_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_info_margin"
        app:layout_constraintTop_toTopOf="@id/product_image_view"
        app:layout_constraintBottom_toBottomOf="@id/product_image_view"
        app:layout_constraintStart_toEndOf="@id/product_image_view"
        android:text="@string/product_name_default"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@color/colorSecondary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_image_view"
        app:layout_constraintBottom_toBottomOf="@id/product_image_view"
        android:layout_marginEnd="@dimen/product_info_margin">

        <TextView
            android:id="@+id/product_stock_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/product_stock_default" />

        <TextView
            android:id="@+id/product_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/product_price_default" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>