<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/order_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/history_store_name_default"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorSecondary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/history_item_payment_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_item_transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/history_transaction_date_default"
        app:layout_constraintStart_toStartOf="@id/order_name"
        app:layout_constraintTop_toBottomOf="@id/order_name" />

    <TextView
        android:id="@+id/order_item_payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/history_payment_amount_default"
        app:layout_constraintBottom_toBottomOf="@id/history_item_transaction_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/order_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="Location"
        app:layout_constraintBottom_toBottomOf="@id/history_item_transaction_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_name"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
