<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.onlinecanteen.fragment.TransactionDetailFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date : "
            android:textColor="@color/colorFontWhite"/>

        <TextView
            android:id="@+id/transaction_detail_transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorFontWhite"
            android:text="@string/history_transaction_date_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Purchased from : "
            android:textColor="@color/colorFontWhite"/>

        <TextView
            android:id="@+id/transaction_detail_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFontWhite"
            android:text="@string/history_store_name_default" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transaction_detail_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/transaction_detail_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorFontWhite"
        android:text="@string/history_payment_amount_default"
        android:textAlignment="textEnd"/>

</LinearLayout>
