<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.onlinecanteen.activity.MerchantOrderDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date : "
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/history_transaction_date_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Purchased by : "
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/user_name_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location : "
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/user_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/user_location" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transaction_detail_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/transaction_detail_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/history_payment_amount_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <Button
            android:id="@+id/acceptOrder"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Accept" />

        <Button
            android:id="@+id/declineOrder"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Decline" />
    </LinearLayout>

</LinearLayout>
